--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "victor-hugo",
-  "version": "1.0.0",
-  "description": "Victor Hugo is a Hugo boilerplate for creating truly epic websites!",
+  "name": "studionock",
+  "version": "0.0.0",
+  "description": "Sourcecode for studionock.com",
   "main": "index.js",
   "scripts": {
     "hugo": "gulp hugo",
     "webpack": "gulp webpack",
-    "build": "gulp build",
-    "build-preview": "gulp build-preview",
+    "build": "NODE_ENV=production gulp build",
+    "build:preview": "gulp build-preview",
     "start": "gulp server",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "flow": "flow"
   },
-  "author": "",
+  "author": "Adam Bergman <adam@fransvilhelm.com>",
+  "repository": "git@github.com:studionock/studionock.com.git",
+  "homepage": "https://studionock.com",
   "license": "MIT",
-  "dependencies": {
-    "autoprefixer": "^6.3.7",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-plugin-transform-class-properties": "^6.10.2",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-register": "^6.11.6",
-    "browser-sync": "^2.13.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.1.1",
-    "eslint-plugin-import": "^1.11.1",
-    "exports-loader": "^0.6.3",
-    "file-loader": "^0.9.0",
+  "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-eslint": "^7.2.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-env": "^1.2.2",
+    "babel-preset-flow": "^6.23.0",
+    "browser-sync": "^2.18.8",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-flowtype": "^2.30.4",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "file-loader": "^0.10.1",
+    "flow-bin": "^0.42.0",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-postcss": "^6.1.1",
-    "gulp-util": "^3.0.7",
-    "imports-loader": "^0.6.5",
-    "postcss-cssnext": "^2.7.0",
-    "postcss-import": "^8.1.2",
-    "postcss-loader": "^0.9.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
-    "whatwg-fetch": "^1.0.0"
+    "gulp-postcss": "^6.4.0",
+    "gulp-util": "^3.0.8",
+    "postcss-cssnext": "^2.10.0",
+    "postcss-import": "^9.1.0",
+    "webpack": "^2.3.2"
+  },
+  "dependencies": {
+    "webpack-merge": "^4.1.0"
   }
 }
