--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
     "no-console": 0,
 
     "import/no-extraneous-dependencies": ["error", {
-      "devDependencies": ["**/*.test.js", "**/*.spec.js", "webpack*", "gulpfile*", "hugo.js"]
+      "devDependencies": ["**/*.test.js", "**/*.spec.js", "webpack*", "gulpfile*", "**/*/gulp/*.js"]
     }]
   }
 }
