Add hom to main menu

--- a/site/config.yml
+++ b/site/config.yml
@@ -9,3 +9,10 @@ MetaDataFormat: "yaml"
 
 params:
   description: "Studio NOCK is an independent platform dedicated to architecture"
+
+menu:
+  main:
+    - Name: "NOCK"
+      Weight: -10
+      Identifier: "home"
+      URL: "/"
