--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "gulp-util": "^3.0.8",
     "postcss-cssnext": "^2.10.0",
     "postcss-import": "^9.1.0",
-    "stylelint": "^7.9.0",
+    "stylelint": "^7.10.1",
+    "stylelint-config-fransvilhelm-order": "^1.0.2",
     "stylelint-config-standard": "^16.0.0",
+    "stylelint-order": "^0.4.3",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3",
     "webpack": "^2.3.2",
