--- a/package.json
+++ b/package.json
@@ -48,5 +48,7 @@
     "webpack": "^2.3.2",
     "webpack-merge": "^4.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "balance-text": "^3.0.0"
+  }
 }
