--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ branches:
     - develop
     - /^v.*$/
 before_install:
-  - brew update
-  - brew install hugo
+  - sudo apt-get -qq update
+  - sudo apt-get install -y hugo
 before_script:
   - npm install -g now
 script: yarn test && yarn run build
