--- a/site/config.yml
+++ b/site/config.yml
@@ -11,8 +11,11 @@ googleAnalytics: "UA-93481692-1"
 params:
   google_verify_meta: "lMtxyxr11DRqovQZElaTngvbj9gu807P8p9HQ23rhK8"
   description: "Studio NOCK is an independent platform dedicated to architecture"
-  fb_app_id: "110185669545135"
-  fb_admin: "157897061392490"
+
+  social:
+    facebook: "studionock"
+    facebook_admin: "157897061392490"
+    facebook_app_id: "110185669545135"
 
   contact:
     email: "info@studionock.com"
