--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,8 @@
   publish = "dist"
   command = "npm run build"
 
+[environment]
+  HUGO_VERSION = "hugo_0.19"
+
 [context.deploy-preview]
   command = "npm run build:preview"
