--- a/site/config.yml
+++ b/site/config.yml
@@ -1,4 +1,4 @@
-baseurl: "https://studionock.com/"
+baseurl: "https://www.studionock.com/"
 languageCode: "en-US"
 title: "Studio NOCK"
 defaultContentLanguage: "en"
