--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,3 @@
 {
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-config-fransvilhelm-order"
-  ]
+  "extends": "stylelint-config-standard"
 }
