--- a/package.json
+++ b/package.json
@@ -3,53 +3,50 @@
   "version": "1.0.8",
   "description": "Source code for studionock.com",
   "main": "index.js",
-  "scripts": {
-    "start": "gulp start",
-    "build": "gulp build",
-    "build:preview": "gulp buildPreview",
-    "test": "gulp test",
-    "lint:js": "eslint src",
-    "lint:css": "stylelint 'src/css/**/*.css'",
-    "flow": "flow"
-  },
   "author": "Adam Bergman <adam@fransvilhelm.com>",
   "repository": "git@github.com:studionock/studionock.com.git",
   "homepage": "https://studionock.com",
   "license": "MIT",
+  "scripts": {
+    "start": "serve --cache 31536000000 ./dist",
+    "dev": "gulp dev",
+    "build": "NODE_ENV=production gulp build",
+    "deploy": "gh-pages -d dist",
+    "lint:js": "eslint 'src/**/*.js'",
+    "lint:css": "stylelint 'src/**/*.css'",
+    "lint": "eslint 'src/**/*.js' && stylelint 'src/**/*.css'"
+  },
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-eslint": "^7.2.1",
-    "babel-loader": "^6.4.1",
-    "babel-preset-env": "^1.2.2",
-    "babel-preset-flow": "^6.23.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.4.0",
     "browser-sync": "^2.18.8",
+    "cssnano": "^3.10.0",
     "del": "^2.2.2",
-    "eslint": "^3.18.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-flowtype": "^2.30.4",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "file-loader": "^0.10.1",
-    "flow-bin": "^0.42.0",
-    "gulp": "gulpjs/gulp.git#4.0",
-    "gulp-clean-css": "^3.0.4",
+    "gulp": "gulpjs/gulp#4.0",
+    "gulp-favicons": "^2.2.7",
+    "gulp-hash": "^4.1.1",
+    "gulp-imagemin": "^3.2.0",
     "gulp-postcss": "^6.4.0",
-    "gulp-sourcemaps": "^2.5.0",
-    "gulp-tape": "^0.0.9",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-util": "^3.0.8",
+    "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.10.0",
     "postcss-import": "^9.1.0",
+    "postcss-reporter": "^3.0.0",
+    "postcss-url": "^6.0.4",
     "stylelint": "^7.10.1",
-    "stylelint-config-fransvilhelm-order": "^1.0.2",
     "stylelint-config-standard": "^16.0.0",
-    "stylelint-order": "^0.4.3",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.6.3",
-    "webpack": "^2.3.2",
-    "webpack-merge": "^4.1.0"
+    "vinyl-named": "^1.1.0",
+    "webpack": "^2.4.1",
+    "webpack-merge": "^4.1.0",
+    "webpack-stream": "^3.2.0"
   },
   "dependencies": {
-    "balance-text": "^3.0.0"
+    "balance-text": "^3.0.0",
+    "serve": "^5.1.4"
   }
 }
