--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,8 @@ before_install:
   - nvm install stable
   - nvm use stable
 install:
-  - govendor get github.com/spf13/hugo
+  - govendor get github.com/gohugoio/hugo
+  - go install github.com/gohugoio/hugo
   - npm install
 
 before_script:
