--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-airbnb-base": "^11.1.3",
     "eslint-plugin-import": "^2.2.0",
     "gulp": "gulpjs/gulp#4.0",
+    "gulp-cli": "^1.4.0",
     "gulp-favicons": "^2.2.7",
     "gulp-hash": "^4.1.1",
     "gulp-imagemin": "^3.2.0",
