--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "gulp build",
     "lint:js": "eslint 'src/**/*.js'",
     "lint:css": "stylelint 'src/**/*.css'",
-    "lint": "eslint 'src/**/*.js' && stylelint 'src/**/*.css'"
+    "lint": "eslint 'src/**/*.js' && stylelint 'src/**/*.css'",
+    "precommit": "lint-staged"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -24,6 +25,7 @@
     "del": "^2.2.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-config-prettier": "^2.4.0",
     "eslint-plugin-import": "^2.2.0",
     "gulp": "gulpjs/gulp#4.0",
     "gulp-favicons": "^2.2.7",
@@ -31,11 +33,14 @@
     "gulp-postcss": "^6.4.0",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-util": "^3.0.8",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.1.3",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-cssnext": "^2.10.0",
     "postcss-import": "^9.1.0",
     "postcss-reporter": "^3.0.0",
     "postcss-url": "^6.0.4",
+    "prettier": "^1.6.1",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
     "vinyl-named": "^1.1.0",
@@ -46,5 +51,17 @@
   "dependencies": {
     "balance-text": "^3.0.0",
     "serve": "^5.1.4"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "prettier --single-quote --trailing-comma all --write",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --single-quote --trailing-comma all --write",
+      "git add"
+    ],
+    "*.css": ["prettier --write", "git add"]
   }
 }
