--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "browser-sync": "^2.18.8",
     "cssnano": "^3.10.0",
@@ -50,6 +51,8 @@
   },
   "dependencies": {
     "balance-text": "^3.0.0",
+    "nock-slider": "^0.1.1",
+    "raf-schd": "^2.0.1",
     "serve": "^5.1.4"
   },
   "lint-staged": {
