--- a/.babelrc
+++ b/.babelrc
@@ -2,8 +2,9 @@
   "presets": [
     ["env", {
       "targets": {
-        "browsers": ["last 2 versions", "safari >= 7"]
+        "browsers": ["> 1%", "last 2 versions", "Firefox ESR"]
       }
     }]
-  ]
+  ],
+  "plugins": [["transform-runtime", { "polyfill": false, "regenerator": true }]]
 }
