--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "author": "Adam Bergman <adam@fransvilhelm.com>",
   "repository": "git@github.com:studionock/studionock.com.git",
-  "homepage": "https://studionock.com",
+  "homepage": "https://www.studionock.com",
   "license": "MIT",
   "scripts": {
-    "start": "serve --cache 31536000000 ./dist",
     "dev": "gulp dev",
     "build": "gulp build",
     "lint:js": "eslint 'src/**/*.js'",
@@ -19,7 +18,6 @@
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "browser-sync": "^2.18.8",
     "cssnano": "^3.10.0",
@@ -51,9 +49,8 @@
   },
   "dependencies": {
     "balance-text": "^3.0.0",
-    "nock-slider": "^0.1.1",
-    "raf-schd": "^2.0.1",
-    "serve": "^5.1.4"
+    "nock-slider": "^0.2.0",
+    "raf-schd": "^2.0.1"
   },
   "lint-staged": {
     "*.js": [
